refactor: WordList 내부에 도메인 로직 보강